# osynic_osudb

./: .gitignore  CHANGELOG.md  CI_OPTIMIZATION.md  Cargo.toml  DEVELOPMENT.md  Makefile  README.md  README_EN.md  Readme.md  dev.ps1  plantuml.md  songs_example.json
.github/workflows/: maintenance.yml  release.yml
examples/: advanced.rs  all1.rs  ser.rs  take3.rs
licenses/: Readme.md
src/: bit.rs  error.rs  extend.rs  lib.rs  origin.rs  wasm.rs
src/entity/: beatmap.rs  collectiondb.rs  mod.rs  osudb.rs
src/entity/collection/: collection.rs  collectiondb.rs  mod.rs
src/entity/field/: grade.rs  mod.rs  mode.rs  rank.rs  star.rs  time.rs
src/entity/osu/: beatmap.rs  mod.rs  osudb.rs
src/entity/osu/field/: grade.rs  mod.rs  mode.rs  modification.rs  rank.rs  star.rs  time.rs
src/entity/scores/: mod.rs  scores.rs  scoresdb.rs
src/entity/scores/field/: action.rs  button.rs  mod.rs  replay.rs
src/io/: bit.rs  mod.rs  read.rs  write.rs
wasm/: Cargo.toml  README.md  README_EN.md  lead.md  package.json
wasm/examples/: index.html  package-lock.json  package.json
wasm/examples/src/: App.vue
wasm/examples/src/components/: CollectionDBViewer.vue  FileUpload.vue  OsuDBViewer.vue  ScoresDBViewer.vue
wasm/src/: lib.rs
