[package]
name = "osynic-osudb"
description = "WebAssembly bindings for osynic_osudb - osu! database parser"
version = "0.1.3"
authors = ["Hako Chest <zoneherobrine@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/osynicite/osynic_osudb"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
osynic_osudb = { path = "..", features = ["wasm"], default-features = false }
wasm-bindgen = "0.2.104"
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.81"
web-sys = "0.3.81"
console_error_panic_hook = "0.1.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"