[package]
name = "osynic-osudb"
version = "0.1.4"
edition = "2024"
rust-version = "1.85.0"
authors = [
    "Hako Chest <zoneherobrine@gmail.com>"
]
description = "A WebAssembly (WASM) binding for the osynic_osudb crate, enabling osu! database manipulation in web environments."
keywords = ["osynic", "osu", "osudb", "wasm"]
categories = ["web-programming","wasm"]
license = "MIT"
homepage = "https://osynic-osudb.deno.dev"
documentation = "https://hakochest.github.io/osynic-osudb"
repository = "https://github.com/osynicite/osynic_osudb"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
osynic_osudb = { path = "..", features = ["wasm","export"]}
